--- a/LatexDrawingEditor/Views/MainWindow.axaml
+++ b/LatexDrawingEditor/Views/MainWindow.axaml
@@ -1,14 +1,33 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:LatexDrawingEditor.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		x:Class="LatexDrawingEditor.Views.MainWindow"
+		xmlns:vm="using:LatexDrawingEditor.ViewModels"
+		xmlns:views="using:LatexDrawingEditor.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="LatexDrawingEditor.Views.MainWindow"
+		FontFamily="Segoe UI, SF Pro Display, Noto Sans, Cantarel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="LatexDrawingEditor">    
+        Title="LatexDrawingEditor" Height="600" Width="900"
+		WindowState="Normal" WindowStartupLocation="CenterScreen"
+		ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="PreferSystemChrome">
+	
     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
+	<Panel Margin="{Binding #MainWindow.OffScreenMargin}">
+		<Panel Height="30" HorizontalAlignment="Left" VerticalAlignment="Top">
+			<Label Content="LDE"
+				   Margin="4,0,4,0"
+				   FontSize="14"
+				   FontWeight="Normal"
+				   VerticalAlignment="Center"
+				   VerticalContentAlignment="Center" />
+		</Panel>
+		<Panel Margin="{Binding #MainWindow.WindowDecorationMargin}">
+			<views:MainView />
+		</Panel>
+	</Panel>
 </Window>
