--- a/LatexDrawingEditor/Views/MainView.axaml
+++ b/LatexDrawingEditor/Views/MainView.axaml
@@ -2,8 +2,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:views="using:LatexDrawingEditor.Views"
+			 xmlns:vm="using:LatexDrawingEditor.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="LatexDrawingEditor.Views.MainView">
+	
   <!-- Application main view, where all controls are placed -->
-	   	
+	<Design.DataContext>
+		<vm:MainWindowViewModel />
+	</Design.DataContext>
+	
+	<Grid RowDefinitions="Auto,*" Background="Transparent" DragDrop.AllowDrop="True">
+		<views:ToolStrip Grid.Row="0" />
+		<DockControl Layout="{Binding Layout}" Margin="4" Grid.Row="1" />
+	</Grid>
 </UserControl>
