--- a/LatexDrawingEditor/App.axaml
+++ b/LatexDrawingEditor/App.axaml
@@ -7,6 +7,9 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <FluentTheme Mode="Light"/>
+        <FluentTheme Mode="Dark"/>
+		<StyleInclude Source="/Styles/Main.axaml" />
     </Application.Styles>
+	
+	
 </Application>
