--- a/LatexDrawingEditor/Styles/Main.axaml
+++ b/LatexDrawingEditor/Styles/Main.axaml
@@ -6,12 +6,19 @@
         </Border>
     </Design.PreviewWith>
 	
-	<Style Selector="StackPanel.Toolbar">
-		<Setter Property="Background" Value="Gray"/>
+	<Style Selector="StackPanel.ToolMenu">
+		<Setter Property="Background" Value="{DynamicResource ThemePrimaryBackgroundBrush}"/>
 	</Style>
 
-	<Style Selector="Button.Toolbar__btn">
+	<Style Selector="Menu.Toolbar">
+		<Setter Property="Background" Value="{DynamicResource ThemeSecondaryBackgroundBrush}"/>
+	</Style>
+	
+
+	<Style Selector="Button.ToolMenu__btn">
 		<Setter Property="Margin" Value="5"/>
+		<Setter Property="Width" Value="40" />
+		<Setter Property="Height" Value="40" />
 	</Style>
 	
 </Styles>
