Add testing vertecies binding

--- a/LatexDrawingEditor/Views/CanvasRenderView.axaml
+++ b/LatexDrawingEditor/Views/CanvasRenderView.axaml
@@ -6,6 +6,7 @@
              x:Class="LatexDrawingEditor.Views.RenderingTestView" >
 
 	<!-- Transparent panel filling entire screen for handling user interactions -->
-	<DockPanel Background="Transparent"></DockPanel>
+	<DockPanel Background="Transparent">		
+	</DockPanel>
 	
 </UserControl>
